# ogre-npr

./: .hgignore  CMakeLists.txt  README.txt  make-dist.bat  ogre-npr.sln
Debug/: resources.cfg
Dependencies/OgreMax/: OgreMaxModel.cpp  OgreMaxModel.hpp  OgreMaxPlatform.hpp  OgreMaxRenderWindowIterator.hpp  OgreMaxScene.cpp  OgreMaxScene.hpp  OgreMaxTypes.hpp  OgreMaxUtilities.cpp  OgreMaxUtilities.hpp  OgrePlugins.cpp  OgrePlugins.hpp  ProgressCalculator.cpp  ProgressCalculator.hpp  Version.cpp  Version.hpp  readme.txt
Release/: resources.cfg
bin.win32/Debug/: resources.cfg
config/osx/: resources.cfg
config/win32/Debug/: Plugins.cfg
config/win32/Release/: resources.cfg
media/: consolas.fontdef  objects.material
media/Grid/: worldgrid.material
media/celshading/: Example_CelShading.cg  shading.material
media/npr/: NPR.cg  NPR.material  gooch.cg  gooch.material  gooch_pp.cg
media/samples/: Box01.mesh  Cone01.mesh  Cube.001.mesh  Cylinder01.mesh  Gengon01.mesh  Plane.001.mesh  Rectangle01.mesh  Rectangle02.mesh  Teapot01.mesh  TorusKnot01.mesh  samples.material  samples.scene
media/stanford/: models.txt  scene.material
ogre-npr/: CMakeLists.txt  MyApplication.cpp  MyApplication.h  NPRDemoApp.cpp  NPRDemoApp.h  OgreApplication.cpp  OgreApplication.h  TextRenderer.cpp  TextRenderer.h  ogre-npr.cpp  ogre-npr.vcproj  precompiled.cpp  precompiled.h
ogre-npr/src/: NPRDemoApp.cpp  NPRDemoApp.h  OgreApplication.cpp  OgreApplication.h  TextRenderer.cpp  TextRenderer.h  ogre-npr.cpp  precompiled.cpp  precompiled.h
scripts/: SConstruct  ogre-npr.vcproj
spyder/: ridge_detect.py
